--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "oauth-1.0a": "^2.1.0"
+    "oauth-1.0a": "^2.1.0",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
-    "request": "^2.79.0"
   }
 }
